--- a/styles/globals.css
+++ b/styles/globals.css
@@ -238,7 +238,7 @@ p.nav > a {
 @media (prefers-color-scheme: dark) {
   :root {
       /* --background-color:hsl(240, 3%, 11%); */
-      --background-color:hsl(240, 3%, 9%);
+      --background-color:hsl(240, 3%, 7%);
       --header-color:hsl(240, 3%, 11%);
       --block-color: hsl(240, 2%, 18%);
       --menu-color:hsl(240, 2%, 18%);
@@ -451,7 +451,7 @@ p.nav > a {
       --m-1: 30px 16px;
       --m-2: 38px 16px;
       --n-1: 16px 16px;
-      --n-2: 16px 8px;
+      --n-2: 16px 0;
       --m-p: 0 32px;
       --p:48px;
       --n-b: transparent;
