--- a/styles/globals.css
+++ b/styles/globals.css
@@ -361,6 +361,9 @@ p.nav > a {
   .c-m {
       margin: 60px auto 0 auto;
   }
+  div.page_not_found {
+    height: 80vh;
+  }
 }
 @media screen and (min-width:1161px) and (max-width:1899px) {
   :root {
@@ -399,7 +402,7 @@ p.nav > a {
       margin: 60px auto 0 auto;
   }
   div.page_not_found {
-    height: 70vh;
+    height: 80vh;
   }
 }
 @media (min-width:601px) and (max-width:1160px) {
@@ -407,7 +410,7 @@ p.nav > a {
       --m-1: 30px 32px;
       --m-2: 58px 32px;
       --n-1: 16px 32px;
-      --n-2: 16px 16px;
+      --n-2: 16px 12px;
       --m-p: 32px 32px;
       --p:60px;
       --n-b: var(--border-color);
@@ -504,7 +507,7 @@ p.nav > a {
       margin: 30px auto 0 auto;
   }
   div.page_not_found {
-    height: 60vh;
+    height: 75vh;
   }
 }
 
@@ -771,6 +774,9 @@ div.page_not_found {
   animation-iteration-count: 1;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
+  background-color: var(--header-color);
+  border-radius: 13px;
+  margin:var(--n-2);
 }
 div.page_not_found_block{
   width: 256px;
