--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -105,7 +105,7 @@
     div.main__menu_nav {
         background-color: transparent;
         width:calc(100%-22px);
-        padding:16px 0;
+        padding:11px 0;
         overflow-x: auto;
         overflow-y: hidden;
         background-color: var(--nav_block);
@@ -115,15 +115,17 @@
     div.main__menu_nav_blocks {
         display: grid;
         /* margin:0 8px; */
-        grid-template-columns: repeat(4,95px);
-        justify-content: center;
+        grid-template-columns: repeat(4,85px);
+        justify-content: space-around;
+        /* align-items: center; */
+
     }
     div.main__menu_nav_block {
-        /* background-color: var(--nav_menu_c); */
-        width:95px;
-        height:95px;
+        background-color: var(--nav_menu_c);
+        width:85px;
+        height:85px;
         border-radius: 13px;
-        /* margin: 0 8px; */
+        margin: 5px 0px;
         cursor: pointer;
         display: flex;
         flex-direction: column;
@@ -131,8 +133,7 @@
         justify-content: center;
     }
     span.nav_header {
-        margin-top:4px;
-        font-size: 12px;
+        font-size: 11px;
         text-align: center;
         font-weight: 700;
     }
