--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -139,15 +139,15 @@
     div.main__menu_nav_blocks {
         display: grid;
         /* margin:0 8px; */
-        grid-template-columns: repeat(4,80px);
+        grid-template-columns: repeat(3,110px);
         justify-content: space-around;
         /* align-items: center; */
 
     }
     div.main__menu_nav_block {
         background-color: var(--nav_menu_c);
-        width:80px;
-        height:80px;
+        width:110px;
+        height:110px;
         border-radius: 13px;
         margin: 5px 0px;
         cursor: pointer;
@@ -157,13 +157,14 @@
         justify-content: center;
     }
     span.nav_header {
-        font-size: 10px;
+        margin-top:8px;
+        font-size: 13px;
         text-align: center;
         font-weight: 700;
     }
     div.main__menu_nav_block_image {
-        width:40px;
-        height:40px;
+        width:46px;
+        height:46px;
         display: flex;
         align-items: center;
         justify-content: center;
