--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -31,14 +31,6 @@
         text-align: center;
         font-weight: 700;
     }
-    div.main__menu_nav_block_image {
-        width:46px;
-        height:46px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 13px;
-    }
 }
 
 @media screen and (min-width:1161px) and (max-width:1899px) {
@@ -74,14 +66,6 @@
         text-align: center;
         font-weight: 700;
     }
-    div.main__menu_nav_block_image {
-        width:46px;
-        height:46px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 13px;
-    }
 }
 
 @media (min-width:601px) and (max-width:1160px) {
@@ -116,20 +100,12 @@
         text-align: center;
         font-weight: 700;
     }
-    div.main__menu_nav_block_image {
-        width:46px;
-        height:46px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 13px;
-    }
 }
 @media (min-width:1px) and (max-width:600px) {
     div.main__menu_nav {
         background-color: transparent;
         width:calc(100%-22px);
-        padding:11px 0;
+        padding:16px 0;
         overflow-x: auto;
         overflow-y: hidden;
         background-color: var(--nav_block);
@@ -137,19 +113,15 @@
         margin: 0;
     }
     div.main__menu_nav_blocks {
-        display: grid;
-        /* margin:0 8px; */
-        grid-template-columns: repeat(4,75px);
-        justify-content: space-around;
-        /* align-items: center; */
-
+        display: flex;
+        margin:0 8px;
     }
     div.main__menu_nav_block {
         background-color: var(--nav_menu_c);
-        width:75px;
-        height:75px;
+        width:95px;
+        height:95px;
         border-radius: 13px;
-        margin: 10px 0px;
+        margin: 0 8px;
         cursor: pointer;
         display: flex;
         flex-direction: column;
@@ -157,16 +129,17 @@
         justify-content: center;
     }
     span.nav_header {
-        font-size: 9px;
+        margin-top:4px;
+        font-size: 12px;
         text-align: center;
         font-weight: 700;
     }
-    div.main__menu_nav_block_image {
-        width:36px;
-        height:36px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 8px;
-    }
+}
+div.main__menu_nav_block_image {
+    width:46px;
+    height:46px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 13px;
 }
