--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,10 @@ h5 {
   font-size:15px;
   line-height: 20px;
 }
+h6 {
+  font-size:13px;
+  line-height:20px;
+}
 p {
   font-size:16px;
   line-height:26px;
