--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -163,3 +163,8 @@ div.main__index_block {
     border-radius: 13px;
     margin:16px 0 8px 0;
 }
+img.main__index_block_img {
+    width:160px;
+    height:160px;
+    border-radius: 13px;
+}
