--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,6 +47,26 @@ p.sm {
 .click {
   cursor: pointer;
 }
+.anim_hover {
+  -ms-transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.anim_hover:hover {
+  -o-transform: translate(0%, -8%);
+  -ms-transform: translate(0%, -8%);
+  -webkit-transform: translate(0%, -8%);
+  -moz-transform: translate(0%, -8%);
+  transform: translate(0%, -8%);
+  -ms-transition: 0.2s;
+  -webkit-transition: 0.2s;
+  -moz-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+  opacity: 0.7;
+}
 
 @keyframes basic_animation {
   from {
