--- a/styles/constructor/index.module.css
+++ b/styles/constructor/index.module.css
@@ -14,6 +14,7 @@ div.main__module_row_block_img {
     /* background-color: var(--nav_menu_c); */
     border-radius: 13px;
     margin-right: 16px;
+    position: relative;
 }
 img.main__module_row_block_pic {
     width:60px;
