--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,19 @@
   padding:0;
 }
 
+div.emoji_h1 {
+  width: 22px;
+  height: 22px;
+  position: relative;
+  margin-left:8px;
+}
+
+.flex_text {
+  display: flex;
+  align-items: center;
+  
+}
+
 h1 {
   font-size:22px;
   line-height:34px;
@@ -26,6 +39,16 @@ h5 {
 h6 {
   font-size:13px;
   line-height:20px;
+}
+span.head {
+  font-size:13px;
+  line-height:20px;
+  font-weight: 700;
+}
+span.head_1 {
+  font-size:15px;
+  line-height: 20px;
+  font-weight: 700;
 }
 p {
   font-size:16px;
@@ -53,6 +76,7 @@ p.sm {
   -o-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+  cursor: pointer;
 }
 .anim_hover:hover {
   -o-transform: translate(0%, -8%);
@@ -582,6 +606,10 @@ html {
   overflow-y: overlay;
 }
 
+html,body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size:16px;
@@ -658,15 +686,19 @@ div.header__logo {
   align-items: center;
 }
 
+div.header__logo_p {
+  width:150px;
+}
+
 div.header__logo_pic {
   position: relative;
-  width: 150px;
+  width: 105px;
   height: 30px;
 }
 
 img.header__logo_img {
   position: absolute;
-  width: auto;
+  width: 105px;
   height: 30px;
   cursor: pointer;
 }
@@ -755,6 +787,7 @@ div.header__action_image {
   border-radius: 13px;
   border:1px solid var(--block-color);
   background-color: var(--block-color);
+  position: relative;
 }
 img.header__action_avatar {   
   width: 46px;
