--- a/styles/search_block.module.css
+++ b/styles/search_block.module.css
@@ -16,10 +16,28 @@ div.search__block_image {
     align-items: center;
     justify-content: center;
 }
+div.search__block_image_s {
+    margin:10px;
+    width: 38px;
+    height: 38px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+img.search__block_image_i {
+    width: 38px;
+    height: 38px;
+    border-radius: 10px;
+}
 div.search__block_content {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 p.smaller {
     margin-top:4px;
