--- a/styles/calculator/index.module.css
+++ b/styles/calculator/index.module.css
@@ -56,7 +56,7 @@ div.main__calculator {
     border: 1px solid var(--border-color);
     border-radius: 13px;
     margin-top:32px;
-    padding:16px 0;
+    padding:48px 0;
 }
 div.main__result {
     display: flex;
@@ -66,12 +66,14 @@ div.main__result {
     border: 1px solid var(--border-color);
     border-radius: 13px;
     margin-top:32px;
-    padding:32px 0;
+    padding:48px 0;
 }
 div.main__calculator > h2 {
-    width:300px;
+    min-width:250px;
+    max-width: 400px;
+    width: 100%;
     text-align: center;
-    margin: 32px auto 0 auto;
+    margin: 0 auto;
 }
 div.main__calculator_module {
     width:85%;
