--- a/styles/calculator/index.module.css
+++ b/styles/calculator/index.module.css
@@ -49,14 +49,14 @@
     }
 }
 div.main__calculator {
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
-    justify-content: center;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
     border: 1px solid var(--border-color);
     border-radius: 13px;
     margin-top:32px;
-    padding:48px 0;
+    padding-bottom:48px;
 }
 div.main__result {
     display: flex;
@@ -76,14 +76,25 @@ div.main__calculator > h2 {
     margin:64px auto 0 auto;
 }
 div.main__calculator_module {
-    width:85%;
+    width:90%;
+    height: 70px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    /* flex-direction: column; */
+    border-radius: 40px;
     align-items: center;
+    /* /* align-items: center; */
     margin: 0 auto;
+    background-color: var(--block-color);
     /* border-bottom: 1px solid var(--border-color); */
     /* padding:16px 0; */
+}
+
+div.main__calculator_module_pic {
+    width:40px;
+    height:40px;
+    position: relative;
+    margin: 16px 24px;
+    /* background-color: var(--background-color); */
 }
 select.main__calculator_module_select {
     margin-top:16px;
@@ -97,15 +108,15 @@ select.main__calculator_module_select {
     padding:0 32px;
 }
 input.main__calculator_module_input {
-    margin-top:16px;
-    max-width: 381px;
+    margin-top:4px;
+    /* max-width: 381px; */
     width:90%;
-    border-radius: 22.5px;
-    height:45px;
+    /* border-radius: 13px; */
+    /* height:45px; */
     background-color: var(--block-color);
-    font-size:16px;
-    padding:0 16px;
-    text-align: center;
+    font-size:20px;
+    /* padding:0 16px; */
+    /* text-align: center; */
 }
 p.click_event {
     margin-top:16px;
@@ -117,6 +128,14 @@ div.module_result_row {
     margin-top:32px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 16px;
+    gap: 16px;
+}
+div.module_result_row_block {
+    width:100%;
+    margin-top:32px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 16px;
     gap: 16px;
 }
@@ -141,4 +160,9 @@ p.module_result_block_desc {
 }
 i.show {
     font-size:14px;
+    color:var(--sub_content);
+}
+.description {
+    font-size: 13px;
+    color:var(--sub_content);
 }
