--- a/styles/calculator/index.module.css
+++ b/styles/calculator/index.module.css
@@ -77,7 +77,7 @@ div.main__calculator > h2 {
 }
 div.main__calculator_module {
     width:90%;
-    height: 70px;
+    height: 75px;
     display: flex;
     /* flex-direction: column; */
     border-radius: 40px;
@@ -109,14 +109,10 @@ select.main__calculator_module_select {
 }
 input.main__calculator_module_input {
     margin-top:4px;
-    /* max-width: 381px; */
     width:90%;
-    /* border-radius: 13px; */
-    /* height:45px; */
     background-color: var(--block-color);
     font-size:20px;
-    /* padding:0 16px; */
-    /* text-align: center; */
+    font-weight: 600;
 }
 p.click_event {
     margin-top:16px;
@@ -163,6 +159,7 @@ i.show {
     color:var(--sub_content);
 }
 .description {
-    font-size: 13px;
-    color:var(--sub_content);
+    font-size: 12px;
+    
+    /* text-align: center; */
 }
