--- a/styles/calculator/index.module.css
+++ b/styles/calculator/index.module.css
@@ -76,19 +76,21 @@ div.main__calculator > h2 {
     text-align: center;
     margin:64px auto 0 auto;
 }
+div.main__calculator_m {
+    width:82.5%;
+    margin: 8px auto;
+}
 div.main__calculator_module {
-    width:90%;
-    height: 65px;
+    height: 55px;
     display: flex;
     border-radius: 50px;
     align-items: center;
-    margin: 4px auto;
     background-color: var(--block-color);
 }
 
 div.main__calculator_module_pic {
-    width:30px;
-    height:30px;
+    width:25px;
+    height:25px;
     position: relative;
     margin: 0 24px;
     /* background-color: var(--background-color); */
@@ -105,10 +107,9 @@ select.main__calculator_module_select {
     padding:0 32px;
 }
 input.main__calculator_module_input {
-    margin-top:4px;
     width:95%;
     background-color: var(--block-color);
-    font-size:18px;
+    font-size:16px;
     font-weight: 500;
 }
 p.click_event {
@@ -158,6 +159,6 @@ i.show {
 .description {
     font-size: 16px;
     color:var(--sub_content);
+    margin-bottom: 16px;
     text-align: center;
-    margin: auto;
 }
