--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -113,15 +113,20 @@
         margin: 0;
     }
     div.main__menu_nav_blocks {
-        display: flex;
-        margin:0 8px;
+        
+        /* margin:0 8px; */
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        grid-template-columns: repeat(4,24vw);
+        gap: 8px 0;
     }
     div.main__menu_nav_block {
-        background-color: var(--nav_menu_c);
-        width:90px;
-        height:90px;
+        /* background-color: var(--nav_menu_c); */
+        width:100%;
+        height:100px;
         border-radius: 13px;
-        margin: 0 8px;
+        /* margin: 0 8px; */
         cursor: pointer;
         display: flex;
         flex-direction: column;
@@ -129,10 +134,10 @@
         justify-content: center; 
     }
     span.nav_header {
-        margin-top:4px;
-        font-size: 11px;
+        margin-top:10px;
+        font-size: 13px;
         text-align: center;
-        font-weight: 700;
+        font-weight: 500;
     }
 }
 div.main__menu_nav_block_image {
