--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -118,15 +118,15 @@
         display: grid;
         align-items: center;
         justify-content: center;
-        grid-template-columns: repeat(4,24.5vw);
-        gap: 16px 0;
+        grid-template-columns: repeat(4,24vw);
+        gap: 16px 0px;
     }
     div.main__menu_nav_block {
         /* background-color: var(--nav_menu_c); */
         width:90%;
         height:100px;
         border-radius: 13px;
-        /* margin: 0 8px; */
+        margin: 0 4px;
         cursor: pointer;
         display: flex;
         flex-direction: column;
@@ -135,7 +135,7 @@
     }
     span.nav_header {
         margin-top:10px;
-        font-size: 12px;
+        font-size: 13px;
         text-align: center;
         font-weight: 500;
     }
