--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -143,7 +143,8 @@
         align-items: center;
         justify-content: center;
         grid-template-columns: repeat(4,24vw);
-        gap: 8px 0px;
+        gap: 12px 0px;
+        margin:4px 0;
     }
     div.main__menu_nav_block {
         /* background-color: var(--nav_menu_c); */
