--- a/styles/globals.css
+++ b/styles/globals.css
@@ -943,14 +943,14 @@ div.confirm__back {
   align-items: center;
   justify-content: center;
   width:100%;
-  height:100vh;
+  height:100%;
   -webkit-backdrop-filter: blur(2px) var(--back_contrast);
   -moz-backdrop-filter: blur(2px) var(--back_contrast);
   -o-backdrop-filter: blur(2px) var(--back_contrast);
   -ms-backdrop-filter: blur(2px) var(--back_contrast);
   backdrop-filter: blur(2px) var(--back_contrast);
   background-color: var(--nav_block_blur);
-  z-index:2;
+  z-index:999999;
 }
 div.confirm__block {
   width:244px;
