--- a/styles/globals.css
+++ b/styles/globals.css
@@ -666,7 +666,7 @@ html,body {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-size:16px;
   line-height:26px;
   background-color: var(--background-color);
