--- a/styles/globals.css
+++ b/styles/globals.css
@@ -666,7 +666,7 @@ html,body {
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size:16px;
   line-height:26px;
   background-color: var(--background-color);
