--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -39,6 +39,11 @@
         justify-content: center;
         border-radius: 13px;
     }
+    div.main__menu_nav_block_image_pic {
+        width:32px;
+        height:32px;
+        position: relative;
+    }
 }
 
 @media screen and (min-width:1161px) and (max-width:1899px) {
@@ -82,6 +87,11 @@
         justify-content: center;
         border-radius: 13px;
     }
+    div.main__menu_nav_block_image_pic {
+        width:32px;
+        height:32px;
+        position: relative;
+    }
 }
 
 @media (min-width:601px) and (max-width:1160px) {
@@ -124,6 +134,11 @@
         justify-content: center;
         border-radius: 13px;
     }
+    div.main__menu_nav_block_image_pic {
+        width:32px;
+        height:32px;
+        position: relative;
+    }
 }
 @media (min-width:1px) and (max-width:600px) {
     div.main__menu_nav {
@@ -156,24 +171,28 @@
         justify-content: center; 
     }
     span.nav_header {
-        margin-top:12px;
+        margin-top:16px;
         font-size: 12px;
+        line-height:16px;
         text-align: center;
         font-weight: 500;
     }
     div.main__menu_nav_block_image {
-        width:54px;
-        height:54px;
+        /* width:54px;
+        height:54px; */
+        width:60px;
+        height:60px;
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 19px;
+        /* border-radius: 19px; */
+        border-radius: 22px;
     }
-}
-div.main__menu_nav_block_image_pic {
-    width:32px;
-    height:32px;
-    position: relative;
+    div.main__menu_nav_block_image_pic {
+        width:36px;
+        height:36px;
+        position: relative;
+    }
 }
 div.main__index_block_row {
     margin-top:16px;
